Add intro to ml post

--- a/data_science.html
+++ b/data_science.html
@@ -5,7 +5,7 @@ permalink: /data_science/
 
 <p>Hey!</p>
 
-<p>I'm going to share my learnings about data science now and again. This is mainly because I want to keep my notes organized and tidy to easily find things that I need, so mainly to help myself :)</p>
+<p>I'm going to share my learnings about data science now and again. This is mainly because I want to keep my notes organized and tidy to easily find the things that I need, so mainly to help myself :)</p>
 
 <p>In the meantime, I'm happy to serve anyone going through the similar path on data science to ease their process.</p>
 
